src/test-c/test_fail/error/invalid_param_count.c
int toto(int i){
    return 0;
}

int main(){
    return toto(1,2);
}